# csv_to_html

./: .gitignore  README.md  pyproject.toml
csv_to_html/: pyproject.toml
csv_to_html/csv/model/: csv_classes.py
csv_to_html/csv/parser/: csv_parser.py
csv_to_html/html/interpolator/: html_interpolator.py
csv_to_html/html/parser/: html_parser.py
csv_to_html/src/csv/parser/: csv_parser.py
csv_to_html/src/csv_to_html/mycsv/model/: csv_classes.py
csv_to_html/src/csv_to_html/mycsv/parser/: csv_parser.py
csv_to_html/src/csv_to_html/myhtml/interpolator/: html_interpolator.py
csv_to_html/src/html/interpolator/: html_interpolator.py
csv_to_html/src/html/parser/: html_parser.py
csv_to_html/src/mycsv/model/: parsing_errors.py
csv_to_html/src/mycsv/parser/: csv_parser.py
csv_to_html/tests/: test_csv_parser.py  test_html_interpolator.py  test_html_template_parser.py
csv_to_html/tests/fixtures/csv/: test.csv  valid_csv.csv
csv_to_html_cli/: .gitignore  pyproject.toml
csv_to_html_cli/src/csv_to_html_cli/: __main__.py  entrypoint.py  setup.py
csv_to_html_cli/tests/: test_csv_to_html_cli.py
csv_to_html_cli/tests/fixtures/: template.html
src/com.github.alialiusefi/keepass/csv/: CSVReader.py  CredentialCSVRow.py  CredentialsCSVHeader.py
src/csv_to_html_cli/: __main__.py
src/csv_to_pdf/csv/model/: csv_classes.py  keepassxc_csv_row.py
src/csv_to_pdf/csv/parser/: csv_parser.py
src/csv_to_pdf/csv/reader/: csv_reader.py
src/csv_to_pdf/csv/validator/: keepassxc_csv_validator.py
src/csv_to_pdf/entity/: credential.py
src/csv_to_pdf/html/interpolator/: html_interpolator.py
src/csv_to_pdf/html/parser/: html_parser.py
src/csv_to_pdf/html/template/: template.py
src/keepassxc_csv_to_pdf/csv/: KeePassXCCSVReader.py  keepassxc_csv_reader.py
src/keepassxc_csv_to_pdf/csv/model/: parsing_errors.py
src/keepassxc_csv_to_pdf/csv/reader/: keepassxc_csv_reader.py
src/keepassxc_csv_to_pdf/csv/validator/: keepassxc_csv_validator.py
src/tests/: test_CSVReader.py  test_keepassxc_csv_reader.py
tests/: test_csv_parser.py  test_csv_to_html_cli.py  test_html_interpolator.py  test_html_template_parser.py  test_keepassxc_csv_reader.py
tests/fixtures/csv/: valid_csv_header.csv
tests/fixtures/html/: template.html
