[project]
name = "keepassxc_csv_to_pdf"
version = "0.0.1"
description = "Store your keepassxc passwords physically!"
authors = [
    {name = "Ali Al-Iusefi", email = "alighanem99@live.com"},
]
dependencies = [
    "black>=23.10.1",
    "pytest>=7.4.3",
    "pylint>=3.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.black]
line-length = 80
