[project]
name = "csv_to_html"
version = "0.0.1"
description = "Convert your csvs to html seamlessly!"
authors = [
    { name = "Ali Al-Iusefi", email = "alighanem99@live.com" },
]
dependencies = [
    "black>=23.10.1",
    "pytest>=7.4.3",
    "pylint>=3.0.2",
    "beautifulsoup4>=4.12.2",
    "twine>=4.0.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
[tool.black]
line-length = 80
