[project]
name = "csv_to_html"
version = "0.1.0"
description = ""
authors = [
    { name = "Ali Al-Iusefi", email = "alighanem99@live.com" },
]
dependencies = [
    "black>=23.10.1",
    "pytest>=7.4.3",
    "pylint>=3.0.2",
    "beautifulsoup4>=4.12.2",
    "twine>=4.0.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 80