[project]
name = "csv_to_html_cli"
version = "0.0.1"
description = "csv_to_html CLI"
authors = [
    { name = "Ali Al-Iusefi", email = "alighanem99@live.com" },
]
dependencies = [
    "csv_to_html @ file:///${PROJECT_ROOT}/../csv_to_html"
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.scripts]
csv_to_html_cli = "csv_to_html_cli.__main__:main"

[tool.black]
line-length = 80